--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <title>Greg Kuwaye - Software Engineer</title>
 </head>
 <body>
+<div class="container">
     <header>
         <h1>Greg Kuwaye</h1>
-        <h2 class="h3">Software Engineer</h2>
+        <h2 class="h3">Software Engineer at <a href="https://www.lyft.com">Lyft</a></h2>
     </header>
-    <section>
-        <p>
-            Hi, I’m a software engineer in San Francisco. I work at <a href="https://www.lyft.com">Lyft</a> on the
-            Lyft.com Platform team.
-        </p>
-    </section>
     <footer>
         <ul class="list-inline">
             <li><a href="https://github.com/kaiku">GitHub</a></li>
-            <li><a href="/assets/greg-kuwaye-resume.pdf">Résumé</a></li>
-            <li><a href="mailto:greg.kuwaye@gmail.com">Email me</a></li>
+            <li><a href="/assets/greg-kuwaye-resume.pdf">Resume</a></li>
+            <li><a href="mailto:greg.kuwaye@gmail.com">Email</a></li>
         </ul>
+
+        <p class="bg-credit">
+            Photo: <a href="http://www.eluminancephoto.com/" title="Erica Calegari - Photographer">Erica Calegari</a>
+        </p>
     </footer>
+</div>
 </body>
 </html>
