--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <footer>
         <ul class="list-inline">
             <li><a href="https://github.com/kaiku">GitHub</a></li>
-            <li><a href="/assets/greg-kuwaye-resume.pdf">Resume</a></li>
+            <li><a href="https://s3.amazonaws.com/gregkuwaye.com/greg-kuwaye-resume.pdf">Resume</a></li>
             <li><a href="mailto:greg.kuwaye@gmail.com">Email</a></li>
         </ul>
 
